# diffutils-2.7

./: ChangeLog  Makefile.am  Makefile.in  configure.in
doc/: Makefile.am  diff.texi
src/: Makefile.am  analyze.c  aux.c  cmp.c  cmpbuf.c  cmpbuf.h  context.c  diff.c  diff3.c  diffmain.c  error.c  exit.c  fnmatch.c  sdiff.c  system.h  util.c  waitpid.c  xmalloc.c
